Add cartService and shopping-cart

--- a/src/app/components/item-card/item-card.component.html
+++ b/src/app/components/item-card/item-card.component.html
@@ -20,7 +20,7 @@
             <a class="cart" href="#">
               <span class="price">{{item.price}}</span>
               <span class="add-to-cart">
-                <span class="txt" (click)="tenne()">Add in cart</span>
+                <span class="txt">Add in cart</span>
               </span>
             </a>
           </div>
