--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,11 +1,15 @@
+
+
 .container {
+    max-width: 100%;
+    margin: 0;
+    justify-content: center;
     background-color: red;
     background-image: linear-gradient(to right, #d7bfd4 , #a9acd2);
 }
 .box-list{
-    padding: 3%;
-    display: flex;
+    padding: 5%;
     display: grid;
     grid-gap: 1rem;
-    grid-template-columns: repeat(auto-fit, minmax(450px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
 }
