--- a/src/app/components/navbar/navbar.component.scss
+++ b/src/app/components/navbar/navbar.component.scss
@@ -1,9 +1,20 @@
 .navBar{
+    display: inline-block;
+    padding: 1.5%;
     width: 100%;
-    height: 10%;
+    height: auto;
+    border-color: black;
+    border-style: solid;
+    border-width: thin;
 }
 
-.navBar img{
-    width: 250px; height: 200px; position: absolute; top: -15px; left: 25px;
-    clip: rect(50px, 150px, 95px, 0px);
+#icon{
+    height: 2%;
+    width: 2%;
+    margin-left: 4%;
+}
+
+#icon:hover{
+    border-radius: 10%;
+    background-color: rgb(201, 201, 201);
 }
