--- a/src/app/pages/shopping-cart/shopping-cart.component.html
+++ b/src/app/pages/shopping-cart/shopping-cart.component.html
@@ -1,14 +1,10 @@
 <div class="container">
   
-<button (click)="backToHome()">Back</button>
-    
-  
-    <app-login-form></app-login-form>
-    <button>check data</button>
-  
-  
-    <div class="box-list">
-      <app-item-card *ngFor="let item of this.cartService.listItem" [item] = "item"></app-item-card>
-    </div>
-  
+  <app-login-form></app-login-form>
+
+  <div class="box-list">
+    <app-item-card
+      *ngFor="let item of this.cartService.listItem" [item]="item">
+    </app-item-card>
   </div>
+</div>
