--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -46,6 +46,40 @@
     <button class="collection">KIDS</button>
     <button class="collection">JIBBITZ™ CHARMS</button>
   </div>
+
+  <!-- <div id="collectionSlide">
+    
+    <span>
+      <img src="https://www.crocs.com.vn/cdn/shop/files/giay_clog_classic_crocs_1200x.webp?v=1690175736">
+      <h4>Clogs</h4>
+    </span>
+    
+    <span>
+      <img src="https://www.crocs.com.vn/cdn/shop/files/mega_crush_crocs_de_cao_1200x.webp?v=1690530158">
+      <h4>Platforms</h4>
+    </span>
+    
+    <span>
+      <img src="https://www.crocs.com.vn/cdn/shop/files/dep_quai_ngang_crocs_echo2_1200x.webp?v=1690531717">
+      <h4>Slides</h4>
+    </span>
+    
+    <span>
+      <img src="https://www.crocs.com.vn/cdn/shop/files/giay_clog_bayaband_1200x.webp?v=1690180415">
+      <h4>Bayabands</h4>
+    </span>
+    
+    <span>
+      <img src="https://www.crocs.com.vn/cdn/shop/files/xang_dan_1200x.webp?v=1690174954">
+      <h4>Sandals</h4>
+    </span>
+    
+    <span>
+      <img src="https://www.crocs.com.vn/cdn/shop/files/giay_de_xuong_crocs_brooklyn_1200x.webp?v=1690180554">
+      <h4>Wedges</h4>
+    </span>
+  
+  </div> -->
   
   <div class="container">
     <div class="box-list">
