--- a/src/app/components/item-dialog/item-dialog.component.html
+++ b/src/app/components/item-dialog/item-dialog.component.html
@@ -1,27 +1,28 @@
 <div class="container">
-    <button class="close-button" (click)="close()">X</button>
+    <button mat-dialog-close class="close-button">X</button>
     
-    <div class="box-list" *ngFor="let item of this.cartService.listItem">
+    <div class="box-list">
         
-        <label for="name">Name: {{item.name}}</label>
+        <label for="name">Name</label>
         <input type="text" [formControl]="name">
 
-        <label for="price">Price: {{item.price}}</label>
+        <label for="price">Price</label>
         <input type="number" [formControl]="price">
         
-        <label for="instock">Instock: {{item.instock}}</label>
+        <label for="instock">Instock</label>
         <input type="number" [formControl]="instock">
         
-        <label for="img">ImgURL: {{item.img}}</label>
+        <label for="img">ImgURL</label>
         <input type="string" [formControl]="img">
 
-        <label for="img2">Img2URL: {{item.img2}}</label>
+        <label for="img2">Img2URL</label>
         <input type="string" [formControl]="img2">
         
-        <label for="description">Description: {{item.description}}</label>
+        <label for="description">Description</label>
         <textarea type="string" [formControl]="description"></textarea>
 
-        <button type="submit" (click)="modifyItem(item)">Xác nhận</button>
+        <button type="submit" (click)="update()">Xác nhận</button>
+        
     </div>
 
     
